# rtv_1

./: .gitignore  CMakeLists.txt  Makefile
includes/: app.h  camera.h  color.h  intersection.h  keystate.h  light_container.h  material.h  object.h  object_container.h  primitives.h  ray.h  scene.h  shape.h  shapes.h  vec2.h  vec3.h
lib/libft/: CMakeLists.txt  Makefile
lib/libft/includes/: libft.h
lib/libft/src/: ft_clear_2d_array.c  ft_nbrlen.c  get_next_line.c
src/: app.c  camera.c  color.c  cone.c  cylinder.c  keystate.c  light_container.c  main.c  material.c  object_container.c  plane.c  primitives.c  scene.c  shape.c  sphere.c  vec3_add.c  vec3_calc.c  vec3_clamp.c  vec3_length.c  vec3_mut.c  vec3_rot.c
