cmake_minimum_required(VERSION 3.15)
project(rtv1 C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft2)
include_directories(libft2/includes)

add_executable(rtv1
		includes/app.h
		includes/camera.h
		includes/color.h
		includes/intersection.h
		includes/keystate.h
		includes/light_container.h
		includes/material.h
		includes/object.h
		includes/object_container.h
		includes/primitives.h
		includes/ray.h
		includes/scene.h
		includes/shape.h
		includes/shapes.h
		includes/vec2.h
		includes/vec3.h
		libft2/includes/libft.h
		libft2/ft_abs.c
		libft2/ft_atoi.c
		libft2/ft_bzero.c
		libft2/ft_globmatch.c
		libft2/ft_globsearch.c
		libft2/ft_isalnum.c
		libft2/ft_isalpha.c
		libft2/ft_isascii.c
		libft2/ft_isdigit.c
		libft2/ft_isprint.c
		libft2/ft_iswhite.c
		libft2/ft_itoa.c
		libft2/ft_lstadd.c
		libft2/ft_lstdel.c
		libft2/ft_lstdelone.c
		libft2/ft_lstiter.c
		libft2/ft_lstmap.c
		libft2/ft_lstnew.c
		libft2/ft_max.c
		libft2/ft_memalloc.c
		libft2/ft_memccpy.c
		libft2/ft_memchr.c
		libft2/ft_memcmp.c
		libft2/ft_memcpy.c
		libft2/ft_memdel.c
		libft2/ft_memmove.c
		libft2/ft_memrcpy.c
		libft2/ft_memset.c
		libft2/ft_min.c
		libft2/ft_print_memory.c
		libft2/ft_putchar.c
		libft2/ft_putchar_fd.c
		libft2/ft_putendl.c
		libft2/ft_putendl_fd.c
		libft2/ft_putnbr.c
		libft2/ft_putnbr_fd.c
		libft2/ft_putstr.c
		libft2/ft_putstr_fd.c
		libft2/ft_realloc.c
		libft2/ft_str_drop_while.c
		libft2/ft_str_take_while.c
		libft2/ft_strcat.c
		libft2/ft_strchr.c
		libft2/ft_strchrcount.c
		libft2/ft_strclr.c
		libft2/ft_strcmp.c
		libft2/ft_strcpy.c
		libft2/ft_strdel.c
		libft2/ft_strdup.c
		libft2/ft_strequ.c
		libft2/ft_striter.c
		libft2/ft_striteri.c
		libft2/ft_strjoin.c
		libft2/ft_strlcat.c
		libft2/ft_strlen.c
		libft2/ft_strmap.c
		libft2/ft_strmapi.c
		libft2/ft_strncat.c
		libft2/ft_strncmp.c
		libft2/ft_strncpy.c
		libft2/ft_strnequ.c
		libft2/ft_strnew.c
		libft2/ft_strnstr.c
		libft2/ft_strrchr.c
		libft2/ft_strreplace.c
		libft2/ft_strrev.c
		libft2/ft_strsplit.c
		libft2/ft_strstr.c
		libft2/ft_strsub.c
		libft2/ft_strtolo.c
		libft2/ft_strtoup.c
		libft2/ft_strtrim.c
		libft2/ft_tolower.c
		libft2/ft_toupper.c
		libft2/get_next_line.c
		libft2/get_next_line.h
		libft2/libft.h
		src/app.c
		src/camera.c
		src/color.c
		src/cone.c
		src/cylinder.c
		src/keystate.c
		src/light_container.c
		src/main.c
		src/material.c
		src/object_container.c
		src/plane.c
		src/primitives.c
		src/scene.c
		src/shape.c
		src/sphere.c
		src/vec3_add.c
		src/vec3_calc.c
		src/vec3_clamp.c
		src/vec3_length.c
		src/vec3_mut.c
		src/vec3_rot.c)
